# piktid-assignment

./: .dockerignore  .editorconfig  .env  .eslintrc.cjs  .gitignore  .prettierrc  README.md  compose.yaml  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.mts
frontend/src/: main.tsx  routes.tsx
frontend/src/components/: ApiProvider.tsx  FaceSwapProvider.tsx  ImageUpload.tsx  ParameterCard.tsx  RadialProgress.tsx  ThemeProviders.tsx  UserDropdown.tsx
frontend/src/contexts/: AuthenticationContext.ts  FaceSwapContext.ts
frontend/src/hooks/: useApi.ts  useInterval.ts
frontend/src/lib/: api.ts  datetime.ts  form.ts  jobs.ts  user.ts
frontend/src/screens/: HomeScreen.tsx  Page404.tsx
queue-manager/: .dockerignore  Dockerfile  main.py  pyproject.toml
src/: index.css  main.tsx  routes.tsx  vite-env.d.ts
src/components/: ApiProvider.tsx  AuthenticationProvider.tsx  FaceSwapProvider.tsx  ImageUpload.tsx  Loading.tsx  ParameterCard.tsx  PasswordInput.tsx  ProtectedRoute.tsx  Spinner.tsx  UserDropdown.tsx
src/components/layouts/: ContentLayout.tsx
src/components/ui/: accordion.tsx  command.tsx  dropdown-menu.tsx  pagination.tsx  resizable.tsx  select.tsx  (+1 more)
src/contexts/: ApiContext.ts  AuthenticationContext.ts  FaceSwapContext.ts
src/hooks/: useAuth.ts  useFaceSwap.ts
src/lib/: api.ts  utils.ts
src/screens/: ErrorScreen.tsx  HomeScreen.tsx  Root.tsx  SignInScreen.tsx
(+7 files in other folders)
