[tool.poetry]
name = "queue-manager"
version = "0.0.1"
description = ""
authors = ["Leonardo Baldin <leobaldin.2000@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
requests = "^2.32.3"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
